namespace Domain.Enums
{
    public enum EntryType
    {
        Debit = 1,
        Credit        
    }
}